# gliding_horse_wildvibe

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.zh.md  build.rs  config.yaml  guard_rules.example.json
.github/workflows/: ci.yml  release-gliding-code.yml
.sisyphus/plans/: context-optimization-plan.md
apps/gliding_code/: Cargo.toml
apps/gliding_code/assets/: logo.txt
apps/gliding_code/calculator/: DESIGN.md  USER_GUIDE.md
apps/gliding_code/calculator_project/: README.md  calculator.py  design.md  test_calculator.py  user_guide.md
apps/gliding_code/src/: config.rs  engine.rs  lib.rs  log_buffer.rs  main.rs  render.rs  repl.rs  tui.rs
apps/gliding_code/tests/: integration_test.rs
apps/software_engineering_team/: README.md
apps/software_engineering_team/center/: .env.example  config.yaml  go.mod  go.sum
apps/software_engineering_team/center/cmd/server/: main.go
apps/software_engineering_team/center/cmd/worker/: main.go
apps/software_engineering_team/center/internal/agent/: agent_manager.go  agent_manager_test.go  agent_store.go
apps/software_engineering_team/center/internal/api/: agent_handler.go  dashboard_handler.go  graph_handler.go  logs_handler.go  pipeline_handler.go  project_handler.go  review_handler.go  router.go  router_test.go  service.go  system_handler.go  websocket.go
apps/software_engineering_team/center/internal/config/: config.go  config_test.go  debug_save_test.go
apps/software_engineering_team/center/internal/executor/: builtin.go  cicd.go  coding.go  deploy.go  design.go  executor.go  executor_test.go  extract.go  requirement.go  review.go  testing.go
apps/software_engineering_team/center/internal/graph/: graph_manager.go  graph_manager_test.go
apps/software_engineering_team/center/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/software_engineering_team/docs/: INSTALL_GUIDE.md
apps/software_engineering_team/edge/daemon/: .env.example  Cargo.toml  build.rs  config.yaml
apps/software_engineering_team/edge/daemon/proto/: se_app.proto
apps/software_engineering_team/edge/daemon/src/: config.rs  main.rs  server.rs
apps/software_engineering_team/edge/daemon/src/agent/: da.rs  mod.rs  runner.rs  sa.rs
apps/software_engineering_team/edge/daemon/src/api/: chat.rs  health.rs  mod.rs  ws.rs
apps/software_engineering_team/edge/daemon/src/graph/: delta.rs  local_store.rs  mod.rs  sync.rs
apps/software_engineering_team/edge/daemon/src/grpc/: client.rs  mod.rs
apps/software_engineering_team/edge/daemon/src/sandbox/: manage.rs
apps/software_engineering_team/edge/daemon/src/sync/: auth.rs  client.rs  heartbeat.rs  mod.rs
apps/software_engineering_team/edge/vscode/: .vscodeignore  agentos-daemon-0.1.0.vsix  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json  tsconfig.json
apps/software_engineering_team/tests/: e2e_center.py  e2e_center.py.bak  e2e_daemon.py
benches/: bench_graph_backend.rs
crates/hyperspace-engine/src/: engine.rs
crates/ontologies/: Cargo.toml
crates/ontologies/src/: error.rs  graph.rs  lib.rs  ontology.rs  reason.rs  shacl.rs
demo_result/research/: AI_Agent_Ecosystem_2026_Report_Complete.md  AI_Agent_Market_Report_2035.md  checkpoint_integration_report.md
docs/: 01-agent-management.md  02-context-management.md  03-memory-system.md  04-bus-system.md  05-tool-system.md  06-perception-system.md  07-knowledge-graph.md  08-result-router.md  09-skill-graph.md  10-background-batch-agent.md  ADVANCED_FEATURES_DESIGN.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CORE_DESIGN_PHILOSOPHY.md  CORE_DESIGN_PHILOSOPHY.zh.md  DESIGN_DETAIL.md
scripts/: test_mcp.sh  test_mcp_e2e.py
src/: graph_backend.rs  lib.rs  main.rs  ontology.rs
src/api/grpc/: server.rs
src/api/http/: mod.rs
src/batch/: bridge.rs  context.rs  emitter.rs  error.rs  extractor.rs  manager.rs  mod.rs  persister.rs  prompt.rs  trigger.rs  types.rs  validator.rs  vocabulary.rs  window.rs
src/causal/: engine.rs  fused.rs  mod.rs  store.rs  types.rs
src/config/: mod.rs  settings.rs
src/core/: agent_instance.rs  agent_runner.rs  biz_agent.rs  checkpoint.rs  context_compressor.rs  event_bus.rs  execution_event.rs  five_w2h.rs  mod.rs  prompt_loader.rs  sa.rs  syscall_gate.rs  system_prompt.rs  tool_controller.rs  tool_result_aging.rs  tracked_action.rs  validation.rs
src/core/agent_runner/: execution.rs  mod.rs  prompt.rs  utils.rs
src/core/sa/: mod.rs  tests.rs
src/core/workflow/: adapter.rs  definition.rs  loader.rs
src/gateway/: cache.rs  model_router.rs  rate_limiter.rs  unified_gateway.rs
src/gnn/: features.rs  mod.rs  similarity.rs
src/knowledge_graph/: bridge.rs  code_ast.rs  mod.rs  ontology.rs  store.rs  types.rs
src/memory/: consistency_engine.rs  embedding_service.rs  hyperspace_store.rs  l0_store.rs  l1_session.rs  l2_blackboard.rs  l3_projection.rs  memory_bus.rs  memory_manager.rs  mod.rs  prefetch_engine.rs  scheduler.rs  unified_graph.rs  vector_store.rs
src/methodology/: gate.rs
src/perception/: proactive_engine.rs
src/root_cause/: mod.rs
src/skill_graph/: discovery.rs  embedding.rs  evolution.rs  graph_algorithms.rs  graph_store.rs  mod.rs  types.rs
src/temporal/: mod.rs  timeline.rs  types.rs
src/tools/: import_scanner.rs  mcp_client.rs  mod.rs  tool_executor.rs  tool_groups.rs  tool_guard.rs
src/tools/builtin/: bash.rs  hooks.rs  knowledge.rs  mcp.rs  mod.rs
src/tools/knowledge_graph/: bridge.rs  extractor.rs  rdf_mapper.rs  store.rs
src/tools/result_router/: graphify.rs  router.rs  summary.rs
src/tools/tool_executor/: builtins.rs  mod.rs
src/tools/workspace_monitor/: inventory.rs  mod.rs
src/utils/: logging.rs  mod.rs  text.rs
src/worker/: agent_os_worker.rs  task_queue.rs
tests/: 5w2h_integration_test.rs  e2e_5w2h_test.rs  mcp_integration_test.rs
tests/integration_mod/: mod.rs  test_comprehensive.rs  test_deepseek.rs  test_e2e.rs  test_e2e_autonomous.rs  test_e2e_programming.rs  test_e2e_research.rs  test_gateway.rs  test_result_router.rs  test_sa.rs  test_skill_graph.rs
(+83 files in other folders)
