[package]
name = "glidinghorse"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"

# LLM 通信
async-openai = "0.20"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# 图数据库
oxigraph = { version = "0.4", features = ["rocksdb"] }

# 向量数据库
qdrant-client = "1.8"

# JSON-LD
json-ld = "0.13"
json-syntax = "0.12"

# JSON Schema
jsonschema = "0.18"
serde_json = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }

# 数字签名
ed25519-dalek = "2.1"
base64 = "0.21"
ring = "0.17"

# gRPC
tonic = "0.10"
prost = "0.12"

# HTTP
axum = "0.7"
tower = "0.4"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# 工具
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
md5 = "0.7"

# 存储
sled = "0.34"

# 并发
parking_lot = "0.12"
dashmap = "5.5"

# 指标
prometheus = "0.13"

# 文件操作
glob = "0.3"
walkdir = "2.4"
regex = "1.10"

# 配置
config = "0.14"
dotenv = "0.15"

# 消息队列
yaque = "0.6"
bincode = "1.3"
futures = "0.3"
tokio-util = "0.7"
bytes = "1.5"

# 代码 AST 提取
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
sha2 = "0.10"

# 文本/Unicode 处理
unicode-width = "0.1"
unicode-segmentation = "1.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"
testcontainers = "0.15"
tempfile = "3.10"

[build-dependencies]
tonic-build = "0.10"
