[package]
name = "glidinghorse"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*", "crates/ontologies", "apps/gliding_code"]

[features]
default = ["ontology"]
# Ontology engine (SHACL, reason, lint, diff) — always enabled
ontology = []
# Embeddings (ONNX model, ~100MB added to binary)
ontology-embeddings = ["ontology"]
# Causal layer (python3 + dowhy needed at runtime)
ontology-causal = ["ontology"]

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"

# LLM 通信
async-openai = "0.20"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# 图数据库
oxigraph = "0.5"

# 内存向量索引（替换 qdrant-client）
hyperspace-engine = { path = "crates/hyperspace-engine" }

# JSON-LD
json-ld = "0.13"
json-syntax = "0.12"

# JSON Schema
jsonschema = "0.18"
serde_json = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }

# 数字签名
ed25519-dalek = "2.1"
base64 = "0.21"
ring = "0.17"

# gRPC
tonic = "0.10"
prost = "0.12"

# HTTP
axum = "0.7"
tower = "0.4"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# 图算法（DAG 调度引擎）
petgraph = "0.6"

# 工具
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.19"
md5 = "0.7"

# 存储
redb = "4.1"

# 并发
parking_lot = "0.12"
dashmap = "5.5"

# 指标
prometheus = "0.13"

# 文件操作
glob = "0.3"
walkdir = "2.4"
regex = "1.10"

# 配置
config = "0.14"
dotenv = "0.15"

# 消息队列
yaque = "0.6"
bincode = "1.3"
futures = "0.3"
tokio-util = "0.7"
bytes = "1.5"

# 代码 AST 提取
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
sha2 = "0.10"
similar = "2.5"
lru = "0.12"
hex = "0.4"
notify = "6.1"
notify-debouncer-mini = "0.4"

# 文本/Unicode 处理
unicode-width = "0.1"
unicode-segmentation = "1.10"

# ─── Ontologies engine (ported from open-ontologies) ────────
ontologies = { path = "crates/ontologies" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"
testcontainers = "0.15"
tempfile = "3.10"

[build-dependencies]
tonic-build = "0.10"

[[bench]]
name = "bench_graph_backend"
harness = false

# Versions:
#   thiserror = "2"   (both GH and OO)
#   oxigraph = "0.5"  (both GH and OO, unified)
