[package]
name = "agentos-daemon"
version = "0.1.0"
edition = "2021"
description = "Agent OS Edge Daemon - local execution node for federated architecture"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
dirs = "5"

# Agent Core
async-openai = "0.20"

# Docker Sandbox
bollard = "0.16"

# Local Graph
oxigraph = { version = "0.4", features = ["rocksdb"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# JWT
jsonwebtoken = "9"

# Async utilities
tokio-util = "0.7"
tokio-stream = "0.1"

# gRPC client
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
opt-level = 2
lto = true